# libuwsc

./: .gitmodules  .travis.yml  BUILDOPENWRT.md  BUILDOPENWRT_ZH.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.md  README_ZH.md  frame-format
example/: CMakeLists.txt  echo_server.py  example.c  example.lua  helloworld.c
src/: CMakeLists.txt  base64.c  base64.h  buffer.c  buffer.h  common.h  config.h.in  log.c  log.h  sha1.c  sha1.h  ssl.c  ssl.h  utils.c  utils.h  uwsc.c  uwsc.h
src/lua/: CMakeLists.txt  uwsc_lua.c  uwsc_lua.h
